# PIDNet_segmenation

./: .gitignore  Dockerfile  README.md  bulk_inference.py  config.yaml  dataset_preprocessing_test.py  docker-compose.yml  generate_visualizations.py  image-dimenssion.md  inference.py  preprocess_masks.py  pyproject.toml  requiremt.txt  train.py
.devcontainer/: devcontainer.json
data/: __init__.py  datamodule.py
models/: __init__.py  lightning_module.py  pidnet.py
utils/: __init__.py  utils.py
